# change-the-md5

./: .gitignore  LICENSE  README.md  ctmd5.py  pyproject.toml  setup.py
.github/workflows/: release.yml
src/: ctmd5.py
tests/: __init__.py
